[tool.poetry]
name = "nossoprojeto"
version = "0.1.0"
description = "implementação da cifra de cesar"
authors = ["Felipe Caetano <felipecmelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
