[tool.poetry]
name = "nossoprojeto"
version = "0.1.0"
description = "implementação da cifra de cesar"
authors = ["Felipe Caetano <felipecmelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
blue = "^0.8.0"
isort = "^5.10.1"
mkdocs = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
